# fastapi-plotly

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
fastapi-plotly-app/: pyproject.toml
fastapi-plotly-app/fastapi_plotly_app/app/: main.py
